[gd_scene load_steps=5 format=3 uid="uid://bh71sgkb7ilji"]

[ext_resource type="Script" path="res://Scripts/NodeSentence.gd" id="1_at5jy"]
[ext_resource type="PackedScene" uid="uid://bomromd5ru40h" path="res://Objects/Actions.tscn" id="2_trq4v"]

[sub_resource type="Theme" id="Theme_llmqa"]

[sub_resource type="LabelSettings" id="LabelSettings_r4tb1"]
font_color = Color(0.521569, 0.521569, 0.521569, 1)

[node name="DialogNode" type="GraphNode" groups=["graph_nodes"]]
offset_right = 565.0
offset_bottom = 177.0
size_flags_vertical = 0
theme = SubResource("Theme_llmqa")
title = "NodeSentence"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 0.156863, 0.396078, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.0352941, 0.443137, 0.407843, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_at5jy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainColumn" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainColumn"]
layout_mode = 2

[node name="Character" type="HBoxContainer" parent="MarginContainer/MainColumn/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Character" type="Label" parent="MarginContainer/MainColumn/VBoxContainer/Character"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Speaker"

[node name="CharacterDrop" type="OptionButton" parent="MarginContainer/MainColumn/VBoxContainer/Character"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainColumn/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="DisplayName" type="HBoxContainer" parent="MarginContainer/MainColumn/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DisplayName" type="Label" parent="MarginContainer/MainColumn/VBoxContainer/MarginContainer/DisplayName"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "â†³ Display Name"
label_settings = SubResource("LabelSettings_r4tb1")

[node name="LineEdit" type="LineEdit" parent="MarginContainer/MainColumn/VBoxContainer/MarginContainer/DisplayName"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Text" type="HBoxContainer" parent="MarginContainer/MainColumn"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Text" type="Label" parent="MarginContainer/MainColumn/Text"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Sentence"

[node name="TextEdit" type="TextEdit" parent="MarginContainer/MainColumn/Text"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 3
wrap_mode = 1
caret_blink = true

[node name="Actions" parent="MarginContainer/MainColumn" instance=ExtResource("2_trq4v")]
layout_mode = 2

[connection signal="close_request" from="." to="." method="_on_GraphNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_GraphNode_resize_request"]
